More test around promoting a version